# tf-steam-api-parser

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  data_classes.h  graph_info.json  main.cpp  main.h  stat_names.json  template.md
.github/workflows/: linux-workflow.yml  windows-workflow.yml
templates/: achievement_stats.md  class_stats_mvm.md  class_stats_pvp.md  map_stats.md
